<resources>
    <string name="app_name">3rd Medical Summer Training Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer">Navigation_Drawer</string>
    <string name="kovid">KOVID</string>
    <string name="_19">19</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_to_our_services">Welcome To Our Services</string>
    <string name="prevention_and_advice">PREVENTION and ADVICE</string>
    <string name="follow_steps_to_wash_hands">Follow steps to wash hands</string>
    <string name="transmission_of_covid_19">TRANSMISSION OF COVID-19</string>
    <string name="symptoms_of_coronavirus">SYMPTOMS OF CORONAVIRUS</string>
    <string name="wash_your_hands_frequently">Wash your hands frequently</string>
    <string name="Advice1">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water for at least 20 seconds.</string>
    <string name="Advice2">Maintain at least 1 metre (3 feet) distance between yourself &amp; anyone who is coughing or sneezing. If you are too close, get chance to infected.</string>
    <string name="maintain_social_distancing">Maintain social distancing</string>
    <string name="avoid_touching_face">Avoid touching face</string>
    <string name="Advice3">Hands touch many surfaces and can pick up viruses. So, hands can transfer the virus to your eyes, nose or mouth and can make you sick.</string>
    <string name="practice_respiratory_hygiene">Practice respiratory hygiene</string>
    <string name="Advice4">Maintain good respiratory hygiene as covering your mouth &amp; nose with your bent elbow or tissue when cough or sneeze.</string>
    <string name="soap_on_hand">Soap on Hand</string>
    <string name="palm_to_palm">Palm to Palm</string>
    <string name="between_fingers">Between Fingers</string>
    <string name="back_to_hands">Back to Hands</string>
    <string name="clean_with_water">Clean with Water</string>
    <string name="focus_on_wrist">Focus on Wrist</string>
    <string name="transmission1">The coronavirus is thought to spread mainly from person to person. This can happen between people who are in close contact with one another.</string>
    <string name="person_to_person_spread_as_close_contact_with_infected">Person-to-person spread as close contact with infected</string>
    <string name="touching_or_contact_with_infected_surfaces_or_objects">Touching or contact with infected surfaces or objects</string>
    <string name="transmission2">A person can get COVID-19 by touching a surface or object that has the virus on it and then touching their own mouth, nose, or possibly their eyes.</string>
    <string name="droplets_that_from_infected_person_coughs_or_sneezes">Droplets that from infected person coughs or sneezes</string>
    <string name="transmission3">The coronavirus is thought to spread mainly from person to person. This can happen between people who are in close contact with one another.</string>
    <string name="fever">High Fever</string>
    <string name="symptoms1">this means you feel hot to touch on your chest or back (you do not need to measure your temperature). It is a common sign and also may appear in 2–10 days.</string>
    <string name="continuous_cough">Continuous cough</string>
    <string name="symptoms2">this means coughing a lot for more than an hour, or 3 or more coughing episodes in 24 hours (if you usually have a cough, it may be worse than usual).</string>
    <string name="difficulty_breathing">Difficulty breathing</string>
    <string name="symptoms3">Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing or shortness of breath.</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="login">Login</string>
    <string name="new_user_signup">New Sign Up</string>
    <string name="chest_x_ray">chest x ray</string>
    <string name="reserve_pcr_analysis">Reserve Pcr Analysis</string>


    <string name="welcome">Welcome</string>
    <string name="firstFragment">It always important to protect your self and your family with us you can.</string>
    <string name="tests">Tests</string>
    <string name="fragmentFifth">Reserve multiple tests that are related to covid-19 pandemic with an fast and easy steps</string>
    <string name="take_vaccine">Take vaccine</string>
    <string name="fragmentForth">Taking the vaccine saves your life and the lives of those around you</string>
    <string name="protect_your_self_now">Protect Your Self Now ‏</string>
    <string name="fragmentSecond">It not only about you also we care about your family friends and all who you love</string>
    <string name="contact_with_doctor">Contact With Doctor</string>
    <string name="FragmentThird">Always be in touch with your doctors for new updates and medical consultation</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_address_associated_with_your_account">Enter Your Email Address Associated With Your Account.</string>
    <string name="send">Send</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="patient_email">Patient Email</string>
    <string name="ssn">SSN</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_of_date">Birth Of Date</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reserve_call_with_doctor">Call With Doctor</string>
    <string name="vaccine_reservation">Vaccine Reservation</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="reserved">Reserved</string>
    <string name="choose_test">Choose Test</string>
    <string name="choose_health_care_center">Choose Health Care Center</string>
    <string name="choose_vaccine">Choose Vaccine</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="no_messages">No Messages</string>
    <string name="book_now">Book Now</string>
    <string name="confirm_your_live_consultation">Confirm Your Live Consultation</string>
    <string name="name">Name:</string>
    <string name="doctor">Doctor:</string>
    <string name="available">Available:</string>
    <string name="_8_00pm_9_00pm">8:00pm-9:00pm</string>
    <string name="consultation_title">Consultation Title</string>
    <string name="check_your_reservation">Check Your Reservation</string>
    <string name="test_reserved">Test Reserved</string>
    <string name="view_test">View Test</string>
    <string name="dose_reserved">Dose Reserved</string>
    <string name="video_call_reserved">Video Call Reserved</string>
    <string name="view_dose">view Dose</string>
    <string name="view_call">view Call</string>
    <string name="dose_name">Dose Name:</string>
    <string name="dose_date">Dose Date:</string>
    <string name="no_dose_reserved">No Dose Reserved</string>
    <string name="no_test_reserved">No Test Reserved</string>
    <string name="no_video_reserved">No Video Reserved</string>

</resources>