<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawable_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nav_img"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="openNavigationDrawer"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu"
                android:contentDescription="@string/navigation_drawer" />

            <TextView
                android:id="@+id/kovid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/kovid"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/_19"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold|italic" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TextView
                    android:id="@+id/welcome_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/ColorApp"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:id="@+id/line_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to_our_services"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />

                    <ListView
                        android:id="@+id/rec_services"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_ADVICE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prevention_and_advice"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="340dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/advice_img"
                                android:layout_width="@dimen/_110sdp"
                                android:layout_height="@dimen/_90sdp"
                                android:src="@drawable/advicea"
                                android:layout_marginTop="@dimen/_12sdp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/txt_title"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txt_title"
                                android:layout_width="@dimen/_125sdp"
                                android:layout_height="wrap_content"
                                android:text="@string/wash_your_hands_frequently"
                                android:textSize="@dimen/_16ssp"
                                android:textColor="@color/ColorApp"
                                android:textStyle="bold|italic"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:layout_marginTop="@dimen/_35sdp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txt_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/regularly_and_thoroughly_clean_your_hands_with_an_alcohol_based_hand_rub_or_wash_them_with_soap_and_water_for_at_least_20_seconds"
                                android:textSize="@dimen/_14ssp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/advice_img" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_wash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/follow_steps_to_wash_hands"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />

                    <ListView
                        android:id="@+id/rec_wash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_TRANSMISSION"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transmission_of_covid_19"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />

                    <ListView
                        android:id="@+id/rec_TRANSMISSION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line_SYMPTOMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/symptoms_of_coronavirus"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold|italic" />

                    <ListView
                        android:id="@+id/rec_SYMPTOMS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp" />

                </LinearLayout>

            </TableLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>