<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_margin="@dimen/_8sdp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/wash_img"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/handa"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/wash_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soap_on_hand"
            android:textColor="@color/ColorApp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold|italic"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/handb"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palm_to_palm"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold|italic"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/handc"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/between_fingers"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold|italic"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/handd"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_hands"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold|italic"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/hande"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clean_with_water"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold|italic"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/handf"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus_on_wrist"
                android:textColor="@color/ColorApp"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold|italic"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>